# ArgsP

./: .gitignore  CMakeLists.txt  README.md  debian
.github/workflows/: release.yml
include/: ArgV.hpp  ArgsP.hpp  Arguments.hpp  ArgumentsParser.hpp  Base.hpp  BaseArguments.hpp  BaseFlags.hpp  Defines.hpp  Error.hpp  Flag.hpp  Flags.hpp  Parameters.hpp  Parser.hpp  Setters.hpp  StringTo.hpp
include/Base/: Argument.hpp  Base.hpp  Flag.hpp  Parameter.hpp
include/hm/: Arguments.hpp  Flags.hpp  Parser.hpp
include/ipp/: BaseArgument.hpp  BaseFlags.hpp  Error.hpp  Parser.hpp  Setters.hpp
include/ipp/Base/: Parameter.hpp
include/tpp/: BaseArguments.hpp  BaseFlags.hpp  Error.hpp  Parser.hpp  Setters.hpp  StringTo.hpp
include/tpp/Base/: Argument.hpp  Flag.hpp  Parameter.hpp
src/: Arguments.cpp  Flags.cpp  Parser.cpp
tests/: CMakeLists.txt  add_new_parameter.cpp  from_readme_exception.cpp  from_readme_no_exception.cpp  main.cpp
